@@ -71,6 +71,7 @@ subprojects {
     tasks.withType<JavaCompile> {
         options.encoding = Charsets.UTF_8.name()
         options.release = 21
+        options.compilerArgs.add("--enable-preview")
         options.isFork = true
     }
     tasks.withType<Javadoc> {
